# SparseMatrix

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: google-tests.yml
include/: MatrixCSR3.h  MatrixReader.h
source/: matrix2x2.txt
src/: MatrixCSR3.cpp  MatrixCSR3.h  MatrixDataByIndex.h  MatrixReader.cpp  MatrixReader.h  emptyMatrix.txt  main.cpp
tests/: CMakeLists.txt  MatrixCSR3Tests.cpp  MatrixOperationsTests.cpp  MatrixReaderTests.cpp  SliceMatrixTests.cpp  matrixMTX2.txt
